2.iteration. Add detailed view. 3.iteration. Send email

--- a/lesson/templates/materials/all_materials.html
+++ b/lesson/templates/materials/all_materials.html
@@ -6,8 +6,14 @@ Materials list
 
 {% block content %}
     <h1>My Material List</h1>
+
     {% for material in materials %}
-        <h2>{{ material.title }}</h2>
+
+        <h2>
+            <a href="{{ material.get_absolute_url }}">
+                {{ material.title }}
+            </a>
+        </h2>
         <p>
             Material author: {{ material.author }}. Published {{ material.publish }}
         </p>
@@ -15,4 +21,5 @@ Materials list
             {{ material.body|truncatewords:5|linebreaks }}
         </p>
     {% endfor %}
+
 {% endblock %}
